# UniTI

./: .gitignore  CMakeLists.txt  Makefile  README.md
apps/: deepseek_inference.py  models.py  simple_ml.py
python/uniti/: __init__.py  autograd.py  backend_numpy.py  backend_selection.py  optim.py  safetensors_loader.py  tokenizer.py
python/uniti/backend_ndarray/: ndarray.py  ndarray_backend_numpy.py
python/uniti/data/: data_basic.py  data_transforms.py
python/uniti/data/datasets/: cifar10_dataset.py  mnist_dataset.py  ptb_dataset.py
python/uniti/init/: init_basic.py  init_initializers.py
python/uniti/nn/: __init__.py  nn_basic.py  nn_conv.py  nn_qwen2.py  nn_sequence.py  nn_transformer.py  paged_attention.py
python/uniti/ops/: ops_logarithmic.py  ops_mathematic.py  ops_tuple.py
src/: ndarray_backend_cpu.cc  ndarray_backend_cuda.cu  ndarray_backend_metal.mm
tests/: bench_cuda.py  bench_cuda_decode.py  bench_cuda_lmhead.py  bench_cuda_overhead.py  bench_cuda_profile.py  bench_ops.py  bench_paged_vs_contiguous.py  debug_tokenizer.py  test_autograd_correctness.py  test_batch_inference.py  test_blas_perf.py  test_cpu_inference.py  test_cpu_perf.py  test_full_cpu.py  test_matmul_detail.py  test_model_create.py  test_ops_correctness.py  test_paged_attention.py  test_paged_vs_contiguous.py  test_tok_standalone.py  test_tokenizer_encode.py  test_train_cifar10.py  test_train_mnist.py  test_train_ptb.py
